[tool.poetry]
name = "turnio-data-export-replit"
version = "0.1.0"
description = ""
authors = ["simondehaan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
